Fix integrtion test after adding Buy Some Get Some Free Deal